<resources>
    <string name="app_name">AITI-KACE APP</string>
    <string name="inputId_hint">Enter Staff Id</string>
    <string name="button_text">Submit</string>
    <string name="login_text">Log In</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="getStarted_text">Get Started</string>
    <string name="decision_text">Don\'t have an Account?</string>
    <string name="register_text">Register</string>
    <string name="signup_text">Sign Up</string>
    <string name="signup_name">Full name</string>
    <string name="con_password">Confirm Password</string>
    <string name="admin_text">Admin</string>
    <string name="login_msg">Login as</string>
    <string name="option">- Or -</string>
    <string name="greeting">Welcome</string>
    <string name="inspire_msg">Have a nice working experience</string>
    <string name="checkin_text">Check In</string>
    <string name="checkout_text">Check Out</string>
    <string name="staff_text">Staff Id</string>
    <string name="bye_msg">See you next time</string>


</resources>
