<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@drawable/login_design">

    <TextView
        android:id="@+id/textView"
        android:layout_width="257dp"
        android:layout_height="133dp"
        android:fontFamily="cursive"
        android:padding="5dp"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textColor="#6D4D4D"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="329dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputid_design"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:padding="15dp"
        android:drawablePadding="15dp"
        android:hint="@string/email_text"
      android:textColorHint="#242323"
        android:textColor="#242323"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.219" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="332dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="#242323"
        android:textColor="#242323"
        android:hint="@string/password_text"
        android:drawableLeft="@drawable/ic_security_black_24dp"
        android:padding="15dp"
        android:drawablePadding="15dp"
        android:background="@drawable/inputid_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="178dp"
        android:layout_height="65dp"
        android:background="@drawable/submitbtn_design"
        android:fontFamily="serif"
        android:text="@string/getStarted_text"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="189dp"
        android:layout_height="57dp"
        android:fontFamily="serif"
        android:text="@string/decision_text"
        android:textAlignment="center"
        android:textColor="#6D4D4D"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetStarted"
        app:layout_constraintVertical_bias="0.21" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="127dp"
        android:layout_height="57dp"
        android:fontFamily="serif"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btnGetStarted"
        app:layout_constraintVertical_bias="0.168" />

</androidx.constraintlayout.widget.ConstraintLayout>