<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:background="@drawable/login_design">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="232dp"
        android:layout_height="113dp"
        android:fontFamily="cursive"
        android:padding="5dp"
        android:text="@string/signup_text"
        android:textAlignment="center"
        android:textColor="#6D4D4D"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/signupName"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/inputid_design"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/signup_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#242323"
        android:textColorHint="#7C7171"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.197" />

    <EditText
        android:id="@+id/signupMail"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/inputid_design"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#242323"
        android:textColorHint="#7C7171"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupName"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/inputid_design"
        android:drawableLeft="@drawable/ic_security_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#242323"
        android:textColorHint="#7C7171"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupMail"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/signupConPassword"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/inputid_design"
        android:drawableLeft="@drawable/ic_security_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/con_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#242323"
        android:textColorHint="#7C7171"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="161dp"
        android:layout_height="56dp"
        android:background="@drawable/submitbtn_design"
        android:fontFamily="serif"
        android:text="@string/register_text"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupConPassword"
        app:layout_constraintVertical_bias="0.164" />

    <EditText
        android:id="@+id/signupStaffId"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/inputid_design"
        android:drawableLeft="@drawable/key"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/staff_text"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#242323"
        android:textColorHint="#7C7171"
        app:layout_constraintBottom_toTopOf="@+id/signupName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.625" />
</androidx.constraintlayout.widget.ConstraintLayout>