<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin"
    android:background="@drawable/main_design">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="208dp"
        android:layout_height="104dp"
        android:text="@string/admin_text"
        android:textAlignment="center"
        android:textColor="#6D4D4D"
        android:textSize="70sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/adminStaffId"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/staff_text"
        android:drawableLeft="@drawable/key"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:textColorHint="#7C7171"
        android:textColor="#242323"
        android:background="@drawable/inputid_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.213" />

    <EditText
        android:id="@+id/adminPassword"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/inputid_design"
        android:drawableLeft="@drawable/ic_security_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#242323"
        android:textColorHint="#7C7171"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminStaffId"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/adminGetStarted"
        android:layout_width="166dp"
        android:layout_height="60dp"
        android:background="@drawable/submitbtn_design"
        android:fontFamily="serif"
        android:text="@string/getStarted_text"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminPassword"
        app:layout_constraintVertical_bias="0.102" />
</androidx.constraintlayout.widget.ConstraintLayout>