<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".checkin"
    android:background="@drawable/login_design">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="297dp"
        android:layout_height="110dp"
        android:fontFamily="cursive"
        android:padding="5dp"
        android:text="@string/greeting"
        android:textAlignment="center"
        android:textColor="#6D4D4D"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

    <Button
        android:id="@+id/btnCheckIn"
        android:layout_width="313dp"
        android:layout_height="64dp"
        android:background="@drawable/submitbtn_design"
        android:fontFamily="serif"
        android:text="@string/checkin_text"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="380dp"
        android:layout_height="47dp"
        android:text="@string/inspire_msg"
        android:textColor="#6D4D4D"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckIn"
        app:layout_constraintVertical_bias="0.101" />
</androidx.constraintlayout.widget.ConstraintLayout>